# regulated-ai-governance

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM.md  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude/skills/: add-governance-filter.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new-framework-integration.md  new-regulation.md
.github/workflows/: ci.yml  labeler.yml  pr-title-check.yml  publish.yml  stale.yml  welcome.yml
docs/: agentic-security-trends-2026.md  api-reference.md  getting-started.md  implementation-note-01.md  implementation-note-02.md  implementation-note-03.md
docs/adr/: 001-policy-before-execution.md  002-regulation-per-factory.md  003-adapter-over-inheritance.md  004-framework-agnostic-core.md
examples/: 01_basic_policy_enforcement.py  02_crewai_guard.py  03_multi_framework_orchestration.py  04_governance_audit_skill.py  05_healthcare_ai_governance.py  06_manufacturing_ot_governance.py  07_government_ai_governance.py  08_insurance_ai_governance.py  09_finra_sec_governance.py  10_eu_ai_act_governance.py  11_automotive_ai_governance.py  12_medtech_ai_governance.py  13_financial_ai_governance.py  14_insurance_ai_governance.py  15_public_sector_ai_governance.py  16_eu_ai_act_governance.py  17_uk_ai_governance.py  18_canada_ai_governance.py  19_australia_ai_governance.py  20_singapore_ai_governance.py  21_japan_ai_governance.py  22_brazil_ai_governance.py  23_india_ai_governance.py  24_south_korea_ai_governance.py  25_middle_east_ai_governance.py  26_africa_ai_governance.py  27_iso42001_compliance.py  28_nordic_ai_governance.py  29_eastern_europe_ai_governance.py  30_us_state_ai_laws.py  31_eu_ai_act_high_risk.py  32_gdpr_ai_accountability.py  33_singapore_ai_governance.py  34_japan_ai_governance.py  35_south_korea_ai_governance.py  36_brazil_lgpd_ai_governance.py  37_india_dpdp_ai_governance.py  38_uae_saudi_ai_governance.py  39_owasp_agentic_top10_governance.py  40_governance_framework_auditor.py  (+5 more)
src/regulated_ai_governance/: __init__.py  agent_guard.py  audit.py  base.py  consent.py  lineage.py  orchestrator.py  pii_detector.py  policy.py  skill.py
src/regulated_ai_governance/adapters/: __init__.py  autogen.py  crewai.py  google_adk_adapter.py  semantic_kernel.py
src/regulated_ai_governance/integrations/: __init__.py  autogen.py  crewai.py  dspy.py  haystack.py  langchain.py  llama_index.py  maf.py  semantic_kernel.py
src/regulated_ai_governance/regulations/: __init__.py  ccpa.py  dora.py  eu_ai_act.py  ferpa.py  gdpr.py  glba.py  hipaa.py  iso42001.py  nist_ai_rmf.py  owasp_llm.py  soc2.py
tests/: test_adapters.py  test_africa_ai_governance.py  test_agent_guard.py  test_audit.py  test_australia_ai_governance.py  test_automotive_ai_governance.py  test_base_pipeline.py  test_brazil_ai_governance.py  test_brazil_lgpd_ai_governance.py  test_canada_ai_governance.py  test_dora.py  test_dspy_integration.py  test_eastern_europe_ai_governance.py  test_eu_ai_act.py  test_eu_ai_act_governance.py  test_eu_ai_act_high_risk.py  test_financial_ai_governance.py  test_gdpr_ai_accountability.py  test_google_adk_adapter.py  test_governance_framework_auditor.py  test_india_ai_governance.py  test_india_dpdp_ai_governance.py  test_insurance_ai_governance.py  test_iso42001.py  test_iso42001_compliance.py  test_japan_ai_governance.py  test_langchain_integration.py  test_llama_index_workflow_haystack_guard.py  test_medtech_ai_governance.py  test_middle_east_ai_governance.py  test_new_modules.py  test_nist_ai_rmf.py  test_nordic_ai_governance.py  test_orchestrator.py  test_owasp_agentic_top10_governance.py  test_owasp_llm.py  test_policy.py  test_public_sector_ai_governance.py  test_regulations.py  test_singapore_ai_governance.py  (+6 more)
