[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regulated-ai-governance"
version = "0.1.0"
description = "Governance patterns for AI agents operating in FERPA, HIPAA, and GLBA regulated environments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ashutosh Rana", email = "17191144+ashutoshrana@users.noreply.github.com" }
]
keywords = [
    "regulated-ai",
    "ai-governance",
    "ferpa",
    "hipaa",
    "glba",
    "enterprise-ai",
    "compliance",
    "llm",
    "multi-agent",
    "policy-enforcement",
    "audit-logging",
    "crewai",
    "langchain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
crewai = ["crewai>=0.28.0"]
langchain = ["langchain-core>=0.1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.urls]
Homepage = "https://github.com/ashutoshrana/regulated-ai-governance"
Documentation = "https://github.com/ashutoshrana/regulated-ai-governance#readme"
Issues = "https://github.com/ashutoshrana/regulated-ai-governance/issues"
Changelog = "https://github.com/ashutoshrana/regulated-ai-governance/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
