[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regulated-ai-governance"
version = "0.12.0"
description = "Comprehensive governance framework for AI agents operating in FERPA, HIPAA, GDPR, GLBA, ISO 42001, and 10+ regulated environments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ashutosh Rana", email = "17191144+ashutoshrana@users.noreply.github.com" }
]
keywords = [
    "regulated-ai",
    "ai-governance",
    "ferpa",
    "hipaa",
    "glba",
    "gdpr",
    "ccpa",
    "soc2",
    "enterprise-ai",
    "compliance",
    "llm",
    "multi-agent",
    "policy-enforcement",
    "audit-logging",
    "pii-detection",
    "data-lineage",
    "consent-management",
    "crewai",
    "langchain",
    "autogen",
    "semantic-kernel",
    "haystack",
    "llama-index",
    "iso42001",
    "eu-ai-act",
    "dora",
    "nist-ai-rmf",
    "owasp-llm",
    "multi-framework",
    "governance-orchestrator",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Legal Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]
dependencies = []

[project.optional-dependencies]
crewai = ["crewai>=1.14.0"]
langchain = ["langchain-core>=0.3.0"]
autogen = ["pyautogen>=0.4.0"]
llama-index = ["llama-index-core>=0.12.0"]
semantic-kernel = ["semantic-kernel>=1.41.0"]
haystack = ["haystack-ai>=2.20.0"]
maf = ["microsoft-agent-framework>=1.0.0"]
all = ["regulated-ai-governance[crewai,langchain,llama-index,semantic-kernel,haystack,maf]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.urls]
Homepage = "https://github.com/ashutoshrana/regulated-ai-governance"
Documentation = "https://github.com/ashutoshrana/regulated-ai-governance#readme"
Issues = "https://github.com/ashutoshrana/regulated-ai-governance/issues"
Changelog = "https://github.com/ashutoshrana/regulated-ai-governance/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
